platform/media/imgproxy/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: imgproxy
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`img.mso.lol`) || Host(`imgproxy.mso.lol`)
      kind: Rule
      services:
        - name: imgproxy
          port: 8080
  tls:
    certResolver: cloudflare
